generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Role {
  id        String   @id @default(cuid())
  name      String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User[]
}

model User {
  id                String          @id @default(uuid())
  username          String          @unique
  password          String
  roleId            String
  createdAt         DateTime        @default(now())
  updatedAt         DateTime        @updatedAt
  email             String          @unique
  passwordUpdatedAt DateTime?
  accountIsVerified Boolean         @default(false)
  buildingId        String?
  emailIsVerified   Boolean         @default(false)
  token             String?         @unique
  tokenExpiredAt    DateTime?
  requireCard       Boolean         @default(false)
  requirePin        Boolean         @default(false)
  pin               String?
  AccessLog         AccessLog[]
  card              Card[]
  face              Face[]
  FaceEmbedding     FaceEmbedding[]
  profil            Profil?
  role              Role            @relation(fields: [roleId], references: [id])
  Building          Building[]      @relation("BuildingToUser")
}

model Profil {
  id        String   @id @default(cuid())
  full_name String?
  photo     String?  @default("/image/illustration-user.png")
  userId    String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Card {
  id            String          @id @default(cuid())
  card_number   String          @unique
  pin           String?
  card_status   CARD_STATUS     @default(UNREGISTER)
  userId        String?
  createdAt     DateTime        @default(now())
  updatedAt     DateTime        @updatedAt
  type          CARD_TYPE       @default(card_id)
  card_name     String?         @default("Kartu Saya")
  isTwoStepAuth Boolean         @default(true)
  banned        Boolean         @default(false)
  user          User?           @relation(fields: [userId], references: [id])
  roomRequest   Room_Request[]
  records       Rooms_Records[]
  room          Room[]          @relation("CardToRoom")
}

model Room {
  id           String           @id @default(cuid())
  ruid         String           @unique
  name         String?
  createdAt    DateTime         @default(now())
  updatedAt    DateTime         @updatedAt
  isActive     Boolean          @default(false)
  buildingId   String?
  device       Device?
  faceAccess   FaceRoomAccess[]
  faceRequests Face_Request[]
  Building     Building?        @relation(fields: [buildingId], references: [id])
  roomRequest  Room_Request[]
  records      Rooms_Records[]
  card         Card[]           @relation("CardToRoom")
}

model Building {
  id        String   @id @default(cuid())
  name      String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  rooms     Room[]
  operator  User[]   @relation("BuildingToUser")
}

model Device {
  id                String        @id @default(cuid())
  device_id         String        @unique
  createdAt         DateTime      @default(now())
  updatedAt         DateTime      @updatedAt
  roomId            String?       @unique
  pin               String        @default("$2b$10$93H.6AQWHWxlq4IQuT1cgu2oCi7OtgyTjYuWlgcq9beN2xPLSgFUW")
  lastOnline        DateTime?
  deviceLastGateway String?
  deviceType        DEVICE_TYPE?  @default(SINGLE_NETWORK)
  firmwareVersion   String?
  gateway_SpotId    String?
  Gateway_Spot      Gateway_Spot? @relation(fields: [gateway_SpotId], references: [id])
  room              Room?         @relation(fields: [roomId], references: [id])
}

model Gateway_Device {
  id               String        @id @default(cuid())
  gateway_short_id String        @unique
  pin              String
  lastOnline       DateTime?
  createdAt        DateTime      @default(now())
  updatedAt        DateTime      @updatedAt
  Gateway_Spot     Gateway_Spot?
}

model Gateway_Spot {
  id               String         @id @default(cuid())
  name             String?
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
  gateway_DeviceId String         @unique
  nodeDevice       Device[]
  gatewayDevice    Gateway_Device @relation(fields: [gateway_DeviceId], references: [id])
}

model Api_Key {
  id        String   @id @default(cuid())
  secret    String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Face {
  id                   String           @id @default(cuid())
  label                String?
  imagePath            String
  embedding            Json?
  embeddingVersion     String?
  captureQuality       Float?
  sourceGatewayShortId String?
  status               FACE_STATUS      @default(PENDING)
  userId               String?
  syncedAt             DateTime?
  createdAt            DateTime         @default(now())
  updatedAt            DateTime         @updatedAt
  user                 User?            @relation(fields: [userId], references: [id])
  roomAccess           FaceRoomAccess[]
  faceRequests         Face_Request[]
}

model FaceRoomAccess {
  id        String   @id @default(cuid())
  faceId    String
  roomId    String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  face      Face     @relation(fields: [faceId], references: [id], onDelete: Cascade)
  room      Room     @relation(fields: [roomId], references: [id], onDelete: Cascade)

  @@unique([faceId, roomId])
}

model Room_Request {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  roomId    String
  cardId    String
  card      Card     @relation(fields: [cardId], references: [id], onDelete: Cascade)
  room      Room     @relation(fields: [roomId], references: [id], onDelete: Cascade)
}

model Rooms_Records {
  id               String   @id @default(cuid())
  roomId           String?
  cardId           String?
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt
  isSuccess        Boolean  @default(false)
  unregisteredCard String?
  Card             Card?    @relation(fields: [cardId], references: [id])
  room             Room?    @relation(fields: [roomId], references: [id])
}

model Face_Request {
  id        String              @id @default(cuid())
  faceId    String
  roomId    String
  status    FACE_REQUEST_STATUS @default(PENDING)
  createdAt DateTime            @default(now())
  updatedAt DateTime            @default(now()) @updatedAt
  face      Face                @relation(fields: [faceId], references: [id], onDelete: Cascade)
  room      Room                @relation(fields: [roomId], references: [id], onDelete: Cascade)

  @@unique([faceId, roomId])
}

model AccessLog {
  id             String   @id
  timestamp      DateTime
  access         String   @db.VarChar(20)
  userId         String?
  similarity     Float?
  best_candidate String?
  createdAt      DateTime @default(now())
  User           User?    @relation(fields: [userId], references: [id])

  @@index([timestamp(sort: Desc)], map: "idx_AccessLog_timestamp")
  @@index([userId], map: "idx_AccessLog_userId")
}

model FaceEmbedding {
  id        String   @id
  userId    String
  embedding Bytes
  createdAt DateTime @default(now())
  User      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId], map: "idx_FaceEmbedding_userId")
}

enum FACE_REQUEST_STATUS {
  PENDING
  APPROVED
  DECLINED
}

enum CARD_STATUS {
  REGISTER
  UNREGISTER
}

enum CARD_TYPE {
  card_id
  card_atm
  card_driver
  card_emoney
  card_studentid
}

enum DEVICE_TYPE {
  SINGLE_NETWORK
  MULTI_NETWORK
}

enum FACE_STATUS {
  PENDING
  ACTIVE
  INACTIVE
  REVOKED
}
