//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Role {
  id String [pk]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  username String [unique, not null]
  password String [not null]
  roleId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  passwordUpdatedAt DateTime
  accountIsVerified Boolean [not null, default: false]
  buildingId String
  emailIsVerified Boolean [not null, default: false]
  token String [unique]
  tokenExpiredAt DateTime
  requireCard Boolean [not null, default: false]
  requirePin Boolean [not null, default: false]
  pin String
  AccessLog AccessLog [not null]
  card Card [not null]
  face Face [not null]
  FaceEmbedding FaceEmbedding [not null]
  profil Profil
  role Role [not null]
  Building Building [not null]
}

Table Profil {
  id String [pk]
  full_name String
  photo String [default: '/image/illustration-user.png']
  userId String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table Card {
  id String [pk]
  card_number String [unique, not null]
  pin String
  card_status CARD_STATUS [not null, default: 'UNREGISTER']
  userId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type CARD_TYPE [not null, default: 'card_id']
  card_name String [default: 'Kartu Saya']
  isTwoStepAuth Boolean [not null, default: true]
  banned Boolean [not null, default: false]
  user User
  roomRequest Room_Request [not null]
  records Rooms_Records [not null]
  room Room [not null]
}

Table Room {
  id String [pk]
  ruid String [unique, not null]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  isActive Boolean [not null, default: false]
  buildingId String
  device Device
  faceAccess FaceRoomAccess [not null]
  faceRequests Face_Request [not null]
  Building Building
  roomRequest Room_Request [not null]
  records Rooms_Records [not null]
  card Card [not null]
}

Table Building {
  id String [pk]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  rooms Room [not null]
  operator User [not null]
}

Table Device {
  id String [pk]
  device_id String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  roomId String [unique]
  pin String [not null, default: '$2b$10$93H.6AQWHWxlq4IQuT1cgu2oCi7OtgyTjYuWlgcq9beN2xPLSgFUW']
  lastOnline DateTime
  deviceLastGateway String
  deviceType DEVICE_TYPE [default: 'SINGLE_NETWORK']
  firmwareVersion String
  gateway_SpotId String
  Gateway_Spot Gateway_Spot
  room Room
}

Table Gateway_Device {
  id String [pk]
  gateway_short_id String [unique, not null]
  pin String [not null]
  lastOnline DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Gateway_Spot Gateway_Spot
}

Table Gateway_Spot {
  id String [pk]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  gateway_DeviceId String [unique, not null]
  nodeDevice Device [not null]
  gatewayDevice Gateway_Device [not null]
}

Table Api_Key {
  id String [pk]
  secret String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Face {
  id String [pk]
  label String
  imagePath String [not null]
  embedding Json
  embeddingVersion String
  captureQuality Float
  sourceGatewayShortId String
  status FACE_STATUS [not null, default: 'PENDING']
  userId String
  syncedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User
  roomAccess FaceRoomAccess [not null]
  faceRequests Face_Request [not null]
}

Table FaceRoomAccess {
  id String [pk]
  faceId String [not null]
  roomId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  face Face [not null]
  room Room [not null]

  indexes {
    (faceId, roomId) [unique]
  }
}

Table Room_Request {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  roomId String [not null]
  cardId String [not null]
  card Card [not null]
  room Room [not null]
}

Table Rooms_Records {
  id String [pk]
  roomId String
  cardId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  isSuccess Boolean [not null, default: false]
  unregisteredCard String
  Card Card
  room Room
}

Table Face_Request {
  id String [pk]
  faceId String [not null]
  roomId String [not null]
  status FACE_REQUEST_STATUS [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  face Face [not null]
  room Room [not null]

  indexes {
    (faceId, roomId) [unique]
  }
}

Table AccessLog {
  id String [pk]
  timestamp DateTime [not null]
  access String [not null]
  userId String
  similarity Float
  best_candidate String
  createdAt DateTime [default: `now()`, not null]
  User User
}

Table FaceEmbedding {
  id String [pk]
  userId String [not null]
  embedding Bytes [not null]
  createdAt DateTime [default: `now()`, not null]
  User User [not null]
}

Enum FACE_REQUEST_STATUS {
  PENDING
  APPROVED
  DECLINED
}

Enum CARD_STATUS {
  REGISTER
  UNREGISTER
}

Enum CARD_TYPE {
  card_id
  card_atm
  card_driver
  card_emoney
  card_studentid
}

Enum DEVICE_TYPE {
  SINGLE_NETWORK
  MULTI_NETWORK
}

Enum FACE_STATUS {
  PENDING
  ACTIVE
  INACTIVE
  REVOKED
}

Ref: User.roleId > Role.id

Ref: Profil.userId - User.id [delete: Cascade]

Ref: Card.userId > User.id

Ref: Room.buildingId > Building.id

Ref: Device.gateway_SpotId > Gateway_Spot.id

Ref: Device.roomId - Room.id

Ref: Gateway_Spot.gateway_DeviceId - Gateway_Device.id

Ref: Face.userId > User.id

Ref: FaceRoomAccess.faceId > Face.id [delete: Cascade]

Ref: FaceRoomAccess.roomId > Room.id [delete: Cascade]

Ref: Room_Request.cardId > Card.id [delete: Cascade]

Ref: Room_Request.roomId > Room.id [delete: Cascade]

Ref: Rooms_Records.cardId > Card.id

Ref: Rooms_Records.roomId > Room.id

Ref: Face_Request.faceId > Face.id [delete: Cascade]

Ref: Face_Request.roomId > Room.id [delete: Cascade]

Ref: AccessLog.userId > User.id

Ref: FaceEmbedding.userId > User.id [delete: Cascade]